--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+body, main {
+    display:flex;
+}
+
 body {
+    position:relative;
+}
+
+body {
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    min-height:100vh;
     background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+    font-size:.75rem;
+    font-family:'Kumbh Sans',sans-serif;
+    padding:15px;
+}
+
+main {
+    background-color:#fff;
+    width:70%;
+    max-width:900px;
+    border-radius:18px;
+    margin-bottom:150px;
+}
+
+.left,.right {
+    width:50%;
 }
